--- a/techflash/apps/techflash/src/styles.scss
+++ b/techflash/apps/techflash/src/styles.scss
@@ -170,6 +170,8 @@ ul {
 
 	&.glass {
 		background-color: rgba(255, 255, 255, 0);
+		background-color: #00bbff0a;
+		background-color: rgba(0, 187, 255, 0.005);
 		backdrop-filter: blur(10px);
 	}
 }
