--- a/techflash/apps/techflash/modules/sandbox/src/lib/country/country.component.html
+++ b/techflash/apps/techflash/modules/sandbox/src/lib/country/country.component.html
@@ -61,7 +61,7 @@
 
 		@for (user of users.value() ?? []; track $index) {
 		<div class="flex col gap-4">
-			<span>{{ user.name }}</span>
+			<a [routerLink]="['/sandbox/playground/' + user.id]">{{ user.name }}</a>
 		</div>
 		<div class="flex col gap-4">
 			<span>{{ user.email }}</span>
