--- a/techflash/apps/techflash/modules/sandbox/src/lib/presentation/presentation.component.html
+++ b/techflash/apps/techflash/modules/sandbox/src/lib/presentation/presentation.component.html
@@ -1,5 +1,6 @@
-<div class="flex col gap-24">
+<div class="flex col gap-32">
 	<section class="tile glass">
+		<p class="font-xl">Signal()</p>
 		<p class="font-m">
 			Signal to prosta funkcja zwracająca obiekt. Ma wbudowane 2 settery (set i update) oraz 2
 			gettery (domyślny i asReadOnly)
@@ -42,6 +43,7 @@
 	</section>
 
 	<section class="tile glass">
+		<p class="font-xl">Computed()</p>
 		<p class="font-m">
 			Computed jest funkcją memoizująca, ReadOnly. Każdy signals, który jest użyty wewnątrz jest
 			zależnością i jego aktualizacja powododuje przeliczenie wartości.
@@ -63,6 +65,7 @@
 	</section>
 
 	<section class="tile glass">
+		<p class="font-xl">linkedSignal()</p>
 		<p class="font-m">
 			linkedSignal jest wariantem computed, z możliwością nadpisania wartości.
 			<br />
@@ -73,7 +76,7 @@
 
 		<pre
 			class="crt"
-			name="computed()">
+			name="linkedSignal()">
   linked = linkedSignal(() => this.signalObject().company); // default value
   linked.set('new value'); // override value
   linked() // 'new value'
@@ -84,10 +87,36 @@
     {{ linked() | json }}
   </pre
 		>
-
-		<div class="flex gap-8">
-			<button (click)="updateCompany()">Update linkedSignal</button>
-			<button (click)="updateUser()">Update dependency</button>
-		</div>
 	</section>
+
+	<section class="tile glass">
+		<p class="font-xl">Effect()</p>
+		<p class="font-m">Effect to nasłuch każdego dependency - tym razem bez zwracanego wyniku.</p>
+
+		<pre
+			class="crt"
+			name="effect()">
+    effect(() =>
+      console.log('User:', this.signalObject());
+      console.log(this.linked());
+    );
+
+    //console.log przy każdej zmianie linked i signal
+
+  </pre
+		>
+	</section>
+</div>
+
+<section class="tile glass">
+	<p class="font-xl">Untracked()</p>
+	<p class="font-m">
+		Untracked to funkcja do opakowania signals wewnatrz funkcji computed i effect, aby móc nadać im
+		wartość, w innym przypadku dojdzie do cicle-dependency
+	</p>
+</section>
+
+<div class="flex gap-8 sticky-bottom">
+	<button (click)="updateCompany()">Update linkedSignal</button>
+	<button (click)="updateUser()">Update dependency</button>
 </div>
