final final v2 draft

--- a/techflash/apps/techflash/modules/sandbox/src/lib/playground/playground.component.html
+++ b/techflash/apps/techflash/modules/sandbox/src/lib/playground/playground.component.html
@@ -17,6 +17,7 @@
 	<div class="flex col gap-16">
 		<tech-tile
 			title="User"
+			[techDummy]="userResource.isLoading()"
 			[resource]="userResource">
 			@let userValue = userResource.value();
 
